# Andromeda

./: .gitignore  README.md
Andromeda/cmake/: CMakeLists.txt
Andromeda/code/include/: andromeda.hpp
Andromeda/code/include/andromeda/: config.hpp  engine.hpp  world.hpp
Andromeda/code/src/: andromeda.cpp
Andromeda/code/src/andromeda/: config.cpp  engine.cpp  world.cpp
Andromeda/docs/: TODO.txt
GameDemo/cmake/: CMakeLists.txt  CMakeSettings.json
GameDemo/code/src/: main.cpp
